# ImgAT-UI

./: README.md  main.py  pyproject.toml
src/: __init__.py  app_layout.py  sidebar.py
src/common/: constants.py
src/pages/: local_gallery.py  online_gallery.py  welcome_page.py
tests/: __init__.py
